--- a/IEnumerable/IEnumerable.csproj
+++ b/IEnumerable/IEnumerable.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fork.cs" />
     <Compile Include="FileEnumenator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
